--- a/06_dom/index.html
+++ b/06_dom/index.html
@@ -4,12 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <title>DOM Basic</title>
+
+    <style>
+
+        body {
+            background: #212121;
+            color: #fff;
+        }
+    </style>
 </head>
 
 <body>
     <div class="bg-black">
-        <h1 class="heading">DOM learning</h1>
+        <h1 id="title" class="heading">DOM learning <span style="display: none;">Test text</span></h1>
+        <h2>Lorm ipsum dolor sit.</h2>
+        <h2>Lorm ipsum dolor sit.</h2>
+        <h2>Lorm ipsum dolor sit.</h2>
         <p>Lorm ipsum dolor sit amet.</p>
+
+        <input type="password" name="" id="">
+
+        <ul>
+            <li class="list_item">one</li>
+            <li class="list_item">two</li>
+            <li class="list_item">three</li>
+            <li class="list_item">Four</li>
+        </ul>
     </div>
 </body>
 
