--- a/07_projects/index.html
+++ b/07_projects/index.html
@@ -21,6 +21,7 @@
             <a class="project-link" href="./2-BMICalculator/index.html">Project 2 - BMI Generator ☕️</a>
             <a class="project-link" href="./3-DigitalClock/index.html">Project 3 - Digital clock 😎</a>
             <a class="project-link" href="./4-GuessTheNumber/index.html">Project 4 - Guess the number 🤨</a>
+            <a class="project-link" href="./5-UmlimitedColors/index.html">Project 5 - Unlimited Colors 🤨</a>
         </div>
     </main>
 </body>
